objects/Tier_1_Certificates__c.object
<CustomObject>
    <description>Certificates for tier 1 Partners</description>
    <fields>
        <fullName>Ceritificate_Scope__c</fullName>
        <description>Scope of diversity certificate</description>
        <label>Ceritificate Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Form__c</fullName>
        <formula>IF( ISBLANK(text(Certificate__c)) || text(Certificate__c) == &apos;OTHER&apos;,  Certificate_Text__c ,text(Certificate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Text__c</fullName>
        <description>If certificate Acronym does not exist, use this field</description>
        <inlineHelpText>If certificate Acronym does not exist, use this field</inlineHelpText>
        <label>Other Certification</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CAMSC</fullName>
                </value>
                <value>
                    <fullName>DBE</fullName>
                </value>
                <value>
                    <fullName>DVBE</fullName>
                </value>
                <value>
                    <fullName>HUB</fullName>
                </value>
                <value>
                    <fullName>HUBZone</fullName>
                </value>
                <value>
                    <fullName>MBE</fullName>
                </value>
                <value>
                    <fullName>MWBE</fullName>
                </value>
                <value>
                    <fullName>NGLCC</fullName>
                </value>
                <value>
                    <fullName>NMSDC</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>SBA-8a</fullName>
                </value>
                <value>
                    <fullName>SBE</fullName>
                </value>
                <value>
                    <fullName>SDVE</fullName>
                </value>
                <value>
                    <fullName>WBE</fullName>
                </value>
                <value>
                    <fullName>WBENC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversity_Classification__c</fullName>
        <description>Classification of Diversity</description>
        <label>Diversity Classification</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Certificate expiration date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Beginning date of certification</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_1_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier 1 partner that the certificate belongs to</description>
        <label>Tier 1 Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner Certification Detail</relationshipLabel>
        <relationshipName>Tier_1_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tier 1 Certificate</label>
    <nameField>
        <displayFormat>T1C-{000000}</displayFormat>
        <label>Tier 1 Certificates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier 1 Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>